task-12/deployment-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deployment
      version: v2
  template:
    metadata:
      labels:
        app: nginx-deployment
        version: v2
    spec:
      containers:
        - name: nginx-deployment
          image: nginx:latest
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: config-volume
      volumes:
        - name: config-volume
          configMap:
            # Provide the name of the ConfigMap containing the files you want to add to the container
            name: configmap-v2
      restartPolicy: Always
