task-12/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /msaschin/nginx/v1
            pathType: Prefix
            backend:
              service:
                name: nginx-service-v1
                port:
                  number: 80
          - path: /msaschin/nginx/v2
            pathType: Prefix
            backend:
              service:
                name: nginx-service-v2
                port:
                  number: 80
